Fix photo alignment in FormerHeaders

--- a/src/pages/History/FormerHeaders/former.module.css
+++ b/src/pages/History/FormerHeaders/former.module.css
@@ -395,8 +395,8 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  top: 10.5%; 
-  left:10%;
+  top: 5%; 
+  left:8.5%;
   padding: 10px;
   border-radius: 20px;
   gap: 5px;
@@ -414,8 +414,8 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  top: 20%; 
-  left:30%;
+  top: 19%; 
+  left:29.5%;
   padding: 10px;
   border-radius: 20px;
   gap: 5px;
@@ -433,8 +433,8 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  top: 20%; 
-  left:49%;
+  top: 19%; 
+  left:48.5%;
   padding: 10px;
   border-radius: 20px;
   gap: 5px;
@@ -452,8 +452,8 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  top: 20%; 
-  left:68%;
+  top: 19%; 
+  left:67.5%;
   padding: 10px;
   border-radius: 20px;
   gap: 5px;
@@ -471,8 +471,8 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  top: 55%; 
-  left:11%;
+  top: 54%; 
+  left:10.5%;
   padding: 10px;
   border-radius: 20px;
   gap: 5px;
@@ -490,8 +490,8 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  top: 55%; 
-  left:30%;
+  top: 54%; 
+  left:29.5%;
   padding: 10px;
   border-radius: 20px;
   gap: 5px;
@@ -509,8 +509,8 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  top: 55%; 
-  left:49%;
+  top: 54%; 
+  left:48.5%;
   padding: 10px;
   border-radius: 20px;
   gap: 5px;
@@ -529,8 +529,8 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  top: 55%; 
-  left:68%;
+  top: 54%; 
+  left:67.5%;
   padding: 10px;
   border-radius: 20px;
   gap: 5px;
@@ -549,8 +549,8 @@
   position: absolute;
   width: 200px;
   height: 200px;
-  top: 90%; 
-  left:11%;
+  top: 89%; 
+  left:10.5%;
   padding: 10px;
   border-radius: 20px;
   gap: 5px;
